# aeroconnections-library-ms

./: .env.example  .env.production  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  design.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-push.yml  docker.yml
apps/books/: admin.py  apps.py  models.py  urls.py  views.py
apps/borrowers/: admin.py  apps.py  models.py  urls.py  views.py
apps/loans/: admin.py  apps.py  models.py  urls.py  views.py
apps/notifications/: admin.py  context_processors.py  models.py  services.py  tasks.py  urls.py  views.py
apps/setup/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
apps/utils/: activity_logger.py
config/: celery.py  context_processors.py  middleware.py  settings.py  urls.py
secrets/: smb-credentials.env.example
templates/: base.html
templates/account/: login.html  logout.html
templates/books/: book_confirm_delete.html  book_create.html  book_detail.html  book_edit.html  book_import.html  book_list.html
templates/borrowers/: borrower_confirm_delete.html  borrower_confirm_permanent_delete.html  borrower_confirm_reactivate.html  borrower_detail.html  borrower_form.html  borrower_import.html  borrower_list.html
templates/includes/: footer.html  pagination.html
templates/loans/: activity_log.html  dashboard.html  loan_confirm_delete.html  (+6 more)
(+29 files in other folders)
